[workspace]
resolver = "2"
members = ["runner"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
cairo-lang-compiler = { version = "2.5.4", default-features = false }
cairo-lang-sierra = { version = "2.5.4", default-features = false }
cairo-vm = { git = "https://github.com/Okm165/cairo-vm.git" }
cairo1-run = { git = "https://github.com/Okm165/cairo-vm.git" }
clap = { version = "4.3.10", features = ["derive"] }
serde_json = "1"