[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-compiler.workspace = true
cairo-lang-sierra.workspace = true
cairo-vm.workspace = true
cairo1-run.workspace = true
clap.workspace = true
serde_json.workspace = true